+ If Today/Yesterday date transformations are enabled, check for the year and remove it if it's the current one. (Subs.php) ! If pretty URLs were enabled, the jump box would redirect to the homepage because 'board' wasn't treated in the URL. (QueryString.php) * Removed a few 'px' suffixes whenever jQuery could handle them by itself. (editor.js, script.js, suggest.js, ! Style fixes. (index.css, media.css) * Indenazi. (Media.template.php)

--- a/Themes/default/styles/index.css
+++ b/Themes/default/styles/index.css
@@ -126,7 +126,7 @@ ul#noava
 
 #top_section
 	overflow: hidden
-	padding: 6px 30px 10px
+	padding: 8px 30px
 	.frame
 		overflow: auto
 		p, h2
